modified:   client/package-lock.json 	modified:   client/package.json 	modified:   client/src/App.js 	new file:   client/src/assets/img/jordan_barret.jpg 	renamed:    client/src/css/licenseAgreement.css -> client/src/css/documents.css 	new file:   client/src/css/not_found.css 	modified:   client/src/pages/About.js 	modified:   client/src/pages/Contacts.js 	deleted:    client/src/pages/Donate.js 	modified:   client/src/pages/Home.js 	modified:   client/src/pages/LicenseAgreement.js 	modified:   client/src/pages/NotFound.js 	modified:   client/src/pages/TermsOfUse.js 	modified:   client/src/utils/getPageData.js 	modified:   server/.env 	modified:   server/commands/__init__.py 	renamed:    server/commands/parse_group.py -> server/commands/group.py 	renamed:    server/commands/parse_owner.py -> server/commands/owner.py 	modified:   server/commands/pages.py 	modified:   server/data/pages/about.json 	modified:   server/main.py 	modified:   server/requirements.txt

--- a/client/src/css/documents.css
+++ b/client/src/css/documents.css
@@ -33,3 +33,9 @@ h4 {
 .desc {
     font-size: 20px;
 }
+
+.contact_section {
+    margin: 20px 0px;
+    font-size: 20px;
+    font-weight: 700;
+}
