--- a/client/src/components/navbar/style.css
+++ b/client/src/components/navbar/style.css
@@ -1,39 +1,21 @@
 .navbar {
-    width: 600px;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+   width: 600px;
+   list-style-type: none;
+   display: flex;
+   justify-content: space-between;
 }
 
 .navbar a {
-    text-decoration: none;
-    :hover {
-        color: rgb(0, 255, 170);
-    }
+   text-decoration: none;
 }
 
-li {
-    font-weight: 500;
-    font-size: 20px;
-    color: white;
-    transition: all 0.2s;
-}.navbar {
-    width: 600px;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+.navbar li {
+   font-weight: 500;
+   font-size: 20px;
+   color: white;
+   transition: all 0.2s;
 }
 
-.navbar a {
-    text-decoration: none;
-    :hover {
-        color: rgb(0, 255, 170);
-    }
-}
-
-li {
-    font-weight: 500;
-    font-size: 20px;
-    color: white;
-    transition: all 0.2s;
+.navbar li:hover {
+   color: rgb(0, 255, 170);
 }
