--- a/client/src/css/contacts.css
+++ b/client/src/css/contacts.css
@@ -1,42 +1,43 @@
-.contacts_sections {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+.contacts-section {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
 }
 
 .links {
-    margin: 65px auto 0px;
+   margin: 65px auto 0;
+}
 
-    h2 {
-        font-size: 30px;
-    }
+.links h2 {
+   font-size: 30px;
+}
 
-    ul {
-        list-style-type: none;
-        display: flex;
+.links ul {
+   list-style-type: none;
+   display: flex;
+}
 
-        li {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            width: 234px;
-            margin: 10px 20px 10px 0px;
-            padding: 0px 58.5px ;
+.links li {
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   width: 234px;
+   margin: 10px 20px 10px 0;
+   padding: 0 58.5px;
+}
 
-            a {
-                border-radius: 30%;
-                transition: all 0.2s ease-in-out;
-                &:hover {
-                    transform: scale(120%);
-                }
-            }
-        }
-    }
+.links li a {
+   border-radius: 30%;
+   transition: all 0.2s ease-in-out;
+}
 
-    img {
-        width: 117px;
-        height: 117px;
-        }
+.links li a:hover {
+   transform: scale(1.2);
+}
+
+.links img {
+   width: 117px;
+   height: 117px;
 }
