--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -44,10 +44,10 @@
     max-width: 1080px;
     margin: 10px 0px;
     font-size: 20px;
+}
 
-    p {
-        margin: 0px 0px 20px 10px;
-    }
+.news p {
+    margin: 0px 0px 20px 10px;
 }
 
 .no_news {
